# Timer

./: CMakeLists.txt  README.md  qml.qrc
include/: logger.h  timer.h
qml/: TimeDialog.qml  main.qml
qml/ResourceProvider/: Resources.qml
qml/StyleSettings/: Style.qml
qml/TimeListModule/: TimeDelegate.qml  TimeList.qml  qmldir
src/: logger.cpp  main.cpp  timer.cpp
